[package]
name = "net"
version = "0.1.0"
authors = ["Nicholas Montano <montanonic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winsock2", "ws2def", "minwindef"] }
